--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 {
   "imports": {
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "react": "https://aistudiocdn.com/react@^19.2.0"
   }
 }
 </script>
@@ -50,6 +50,7 @@
       }
     </script>
     <style>
+      html { scroll-behavior: smooth; }
       body { font-family: 'Inter', sans-serif; background-color: #f8f5f2; }
       .no-scrollbar::-webkit-scrollbar { display: none; }
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
@@ -81,8 +82,8 @@
 
                 <!-- Desktop Nav -->
                 <nav class="hidden md:flex items-center gap-8">
-                    <a href="#" class="text-stone-600 hover:text-brand-900 font-medium text-sm transition-colors">Territorio</a>
-                    <a href="#" class="text-stone-600 hover:text-brand-900 font-medium text-sm transition-colors">Storia</a>
+                    <a href="#territorio" class="text-stone-600 hover:text-brand-900 font-medium text-sm transition-colors">Territorio</a>
+                    <a href="#storia" class="text-stone-600 hover:text-brand-900 font-medium text-sm transition-colors">Storia</a>
                     
                     <button onclick="scrollToEvents()" class="relative text-brand-900 font-semibold text-sm flex items-center gap-2 bg-brand-100 px-4 py-2 rounded-full hover:bg-brand-200 transition-all group">
                         <i data-lucide="calendar" class="w-4 h-4"></i>
@@ -90,7 +91,7 @@
                         <span id="nav-notification" class="hidden absolute -top-1 -right-1 h-5 w-5 items-center justify-center rounded-full bg-red-600 text-[10px] text-white font-bold ring-2 ring-white animate-pulse shadow-sm">0</span>
                     </button>
 
-                    <a href="#" class="text-stone-600 hover:text-brand-900 font-medium text-sm transition-colors">Contatti</a>
+                    <a href="#contatti" class="text-stone-600 hover:text-brand-900 font-medium text-sm transition-colors">Contatti</a>
                 </nav>
 
                 <!-- Actions -->
@@ -220,7 +221,7 @@
         
         <!-- HERO SECTION -->
         <div class="relative h-[60vh] min-h-[500px] w-full overflow-hidden flex items-center justify-center bg-stone-900">
-            <!-- BACKGROUND IMAGE UPDATED WITH FACEBOOK CDN LINK -->
+            <!-- BACKGROUND IMAGE -->
             <div class="absolute inset-0 z-0 bg-cover bg-center transition-all duration-1000" 
                  style="background-image: url('https://scontent.fbri2-1.fna.fbcdn.net/v/t39.30808-6/502622906_24128557276730363_1128000473065477802_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=833d8c&_nc_ohc=fSDHMgKfuL4Q7kNvwH-cU1X&_nc_oc=Adnr9jhXM5IY_QOUKSYZkPLRrRMRNrqXULkHgXcRrVGlHiIxB3TnijwwQmxlO64EVoE&_nc_zt=23&_nc_ht=scontent.fbri2-1.fna&_nc_gid=q2fLCb7j0NT9PRsPhKsHZg&oh=00_AfjCqig3UbjC9HBDpbbftJe3M_S0fEomfCgbEEtdxPAcrA&oe=69311124'); opacity: 0.9;">
             </div>
@@ -244,6 +245,42 @@
                 </button>
             </div>
         </div>
+
+        <!-- QUICK LINKS SECTION -->
+        <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 -mt-12 relative z-20 mb-12 slide-up" style="animation-delay: 0.1s;">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <!-- Card 1 -->
+                <a href="#territorio" class="bg-white rounded-xl shadow-xl p-6 flex items-center gap-4 hover:-translate-y-1 transition-transform border-b-4 border-brand-900 cursor-pointer group">
+                    <div class="w-12 h-12 rounded-full bg-brand-100 flex items-center justify-center text-brand-900 group-hover:bg-brand-900 group-hover:text-white transition-colors">
+                        <i data-lucide="map" class="w-6 h-6"></i>
+                    </div>
+                    <div>
+                        <h3 class="font-bold text-lg text-stone-900 font-serif">Territorio & Borghi</h3>
+                        <p class="text-xs text-stone-500 uppercase tracking-wider font-semibold">Scopri la natura</p>
+                    </div>
+                </a>
+                <!-- Card 2 -->
+                <a href="#storia" class="bg-white rounded-xl shadow-xl p-6 flex items-center gap-4 hover:-translate-y-1 transition-transform border-b-4 border-brand-gold cursor-pointer group">
+                    <div class="w-12 h-12 rounded-full bg-orange-100 flex items-center justify-center text-orange-600 group-hover:bg-brand-gold group-hover:text-white transition-colors">
+                        <i data-lucide="scroll" class="w-6 h-6"></i>
+                    </div>
+                    <div>
+                        <h3 class="font-bold text-lg text-stone-900 font-serif">Storia & Cultura</h3>
+                        <p class="text-xs text-stone-500 uppercase tracking-wider font-semibold">Le nostre radici</p>
+                    </div>
+                </a>
+                <!-- Card 3 -->
+                <a href="#contatti" class="bg-white rounded-xl shadow-xl p-6 flex items-center gap-4 hover:-translate-y-1 transition-transform border-b-4 border-stone-600 cursor-pointer group">
+                    <div class="w-12 h-12 rounded-full bg-stone-100 flex items-center justify-center text-stone-600 group-hover:bg-stone-600 group-hover:text-white transition-colors">
+                        <i data-lucide="phone" class="w-6 h-6"></i>
+                    </div>
+                    <div>
+                        <h3 class="font-bold text-lg text-stone-900 font-serif">Contatti Utili</h3>
+                        <p class="text-xs text-stone-500 uppercase tracking-wider font-semibold">Resta informato</p>
+                    </div>
+                </a>
+            </div>
+        </section>
 
         <!-- FILTER BAR -->
         <div class="sticky top-20 z-40 bg-white border-b border-stone-200 shadow-sm">
@@ -269,7 +306,7 @@
         </div>
 
         <!-- EVENTS GRID -->
-        <div id="eventi-section" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+        <div id="eventi-section" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 scroll-mt-28">
             <div class="flex justify-between items-end mb-8">
                 <div>
                     <h2 class="text-3xl font-serif font-bold text-stone-900">Eventi in Programma</h2>
@@ -295,6 +332,119 @@
                 <button onclick="resetFilters()" class="mt-4 text-brand-900 font-bold hover:underline">Resetta filtri</button>
             </div>
         </div>
+
+        <!-- TERRITORIO SECTION -->
+        <section id="territorio" class="py-20 bg-stone-50 border-t border-stone-200 scroll-mt-20">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="flex flex-col lg:flex-row items-center gap-12">
+                    <div class="lg:w-1/2">
+                        <div class="relative rounded-2xl overflow-hidden shadow-2xl">
+                             <img src="https://loremflickr.com/800/600/umbria,landscape/all" alt="Territorio Avigliano" class="w-full h-auto object-cover transform hover:scale-105 transition-transform duration-700">
+                        </div>
+                    </div>
+                    <div class="lg:w-1/2 space-y-6">
+                        <span class="text-brand-900 font-bold text-sm tracking-widest uppercase">Il Nostro Patrimonio</span>
+                        <h2 class="text-4xl font-serif font-bold text-stone-900">Un Cuore Verde di Borghi e Natura</h2>
+                        <p class="text-stone-600 leading-relaxed text-lg">
+                            Avigliano Umbro è un gioiello incastonato tra le colline, un territorio costellato di borghi storici che mantengono intatta la loro autenticità. Da Sismano a Dunarobba, ogni angolo racconta una storia di tradizioni e bellezza. Il luogo ideale per chi cerca un turismo lento, tra i sentieri del Cammino dei Borghi Silenti e i paesaggi del Lago Tiberino.
+                        </p>
+                        <button class="px-6 py-3 border border-brand-900 text-brand-900 font-bold rounded-lg hover:bg-brand-900 hover:text-white transition-colors">
+                            Esplora i Borghi
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- STORIA SECTION -->
+        <section id="storia" class="py-20 bg-white border-t border-stone-200 scroll-mt-20">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="flex flex-col lg:flex-row-reverse items-center gap-12">
+                     <div class="lg:w-1/2">
+                        <div class="relative rounded-2xl overflow-hidden shadow-2xl">
+                             <img src="https://loremflickr.com/800/600/medieval,castle/all" alt="Storia Avigliano" class="w-full h-auto object-cover transform hover:scale-105 transition-transform duration-700">
+                        </div>
+                    </div>
+                    <div class="lg:w-1/2 space-y-6">
+                        <span class="text-brand-gold font-bold text-sm tracking-widest uppercase">Radici Antiche</span>
+                        <h2 class="text-4xl font-serif font-bold text-stone-900">Dalla Foresta Fossile al Medioevo</h2>
+                        <p class="text-stone-600 leading-relaxed text-lg">
+                            La storia di Avigliano Umbro affonda le radici in un passato millenario. Il territorio ospita la celebre Foresta Fossile di Dunarobba, un monumento naturale unico al mondo che ci riporta indietro di 3 milioni di anni. Il borgo medievale, dominato dalla svettante torre civica, e il Teatro Comunale, gioiello architettonico, testimoniano la ricchezza culturale che ha attraversato i secoli fino ad oggi.
+                        </p>
+                        <button class="px-6 py-3 bg-stone-900 text-white font-bold rounded-lg hover:bg-stone-800 transition-colors">
+                            Scopri la Storia
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- CONTATTI SECTION -->
+        <section id="contatti" class="py-20 bg-brand-50 border-t border-stone-200 scroll-mt-20">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="text-center mb-12">
+                    <span class="text-brand-900 font-bold text-sm tracking-widest uppercase">Siamo qui per te</span>
+                    <h2 class="text-4xl font-serif font-bold text-stone-900 mt-2">Resta in Contatto</h2>
+                </div>
+
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 bg-white rounded-2xl shadow-xl overflow-hidden">
+                    <!-- Info -->
+                    <div class="p-10 bg-brand-900 text-white flex flex-col justify-between">
+                        <div>
+                            <h3 class="text-2xl font-serif font-bold mb-6">Comune di Avigliano Umbro</h3>
+                            <div class="space-y-6">
+                                <div class="flex items-start gap-4">
+                                    <div class="bg-white/10 p-3 rounded-lg"><i data-lucide="map-pin" class="w-6 h-6 text-brand-gold"></i></div>
+                                    <div>
+                                        <p class="font-bold text-brand-gold uppercase text-xs tracking-wider mb-1">Indirizzo</p>
+                                        <p class="text-stone-200">Via F.lli Rosselli 14,<br>05020 Avigliano Umbro (TR)</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start gap-4">
+                                    <div class="bg-white/10 p-3 rounded-lg"><i data-lucide="phone" class="w-6 h-6 text-brand-gold"></i></div>
+                                    <div>
+                                        <p class="font-bold text-brand-gold uppercase text-xs tracking-wider mb-1">Telefono</p>
+                                        <p class="text-stone-200">0744 933521</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start gap-4">
+                                    <div class="bg-white/10 p-3 rounded-lg"><i data-lucide="mail" class="w-6 h-6 text-brand-gold"></i></div>
+                                    <div>
+                                        <p class="font-bold text-brand-gold uppercase text-xs tracking-wider mb-1">Email</p>
+                                        <p class="text-stone-200">info@comune.aviglianoumbro.tr.it</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-12">
+                            <p class="text-sm text-brand-100 opacity-60">Siamo aperti dal Lunedì al Venerdì, dalle 9:00 alle 13:00.</p>
+                        </div>
+                    </div>
+
+                    <!-- Form -->
+                    <div class="p-10">
+                        <h3 class="text-xl font-bold text-stone-800 mb-6">Scrivici un messaggio</h3>
+                        <form id="contact-form" class="space-y-4">
+                            <div>
+                                <label class="block text-xs font-bold text-stone-500 uppercase mb-1">Nome e Cognome</label>
+                                <input type="text" required class="w-full px-4 py-3 bg-stone-50 border border-stone-200 rounded-lg focus:ring-1 focus:ring-brand-900 outline-none transition-all">
+                            </div>
+                            <div>
+                                <label class="block text-xs font-bold text-stone-500 uppercase mb-1">Email</label>
+                                <input type="email" required class="w-full px-4 py-3 bg-stone-50 border border-stone-200 rounded-lg focus:ring-1 focus:ring-brand-900 outline-none transition-all">
+                            </div>
+                            <div>
+                                <label class="block text-xs font-bold text-stone-500 uppercase mb-1">Messaggio</label>
+                                <textarea rows="4" required class="w-full px-4 py-3 bg-stone-50 border border-stone-200 rounded-lg focus:ring-1 focus:ring-brand-900 outline-none transition-all"></textarea>
+                            </div>
+                            <button type="submit" class="w-full bg-brand-900 text-white font-bold py-3 rounded-lg hover:bg-brand-800 transition-colors shadow-lg mt-2">
+                                Invia Messaggio
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- FOOTER -->
