--- a/index.html
+++ b/index.html
@@ -375,6 +375,6 @@
         </button>
     </div>
 
-    <script type="module" src="script.js"></script>
+<script type="module" src="script.js?v=2"></script>
 </body>
 </html>
