--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 {
   "imports": {
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
   }
 }
 </script>
@@ -98,7 +98,7 @@
                         <span class="hidden lg:inline">Condividi</span>
                     </button>
                     
-                    <!-- Mobile Menu Button -->
+                    <!-- Mobile Menu Button (Hamburger) -->
                     <button onclick="toggleMobileMenu()" class="p-2 text-stone-800 md:hidden hover:bg-stone-100 rounded-lg transition-colors">
                         <i data-lucide="menu" class="w-6 h-6"></i>
                     </button>
@@ -165,8 +165,8 @@
             </div>
         </section>
 
-        <!-- FILTER BAR (Not Sticky anymore) -->
-        <div class="bg-white border-b border-stone-200 shadow-sm z-40">
+        <!-- FILTER BAR (Static, not sticky on mobile) -->
+        <div class="bg-white border-b border-stone-200 shadow-sm z-40 relative">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
                 <div class="flex flex-col lg:flex-row gap-4">
                     <div class="relative flex-grow lg:max-w-xs">
@@ -368,6 +368,6 @@
         </button>
     </div>
 
-<script type="module" src="script.js?v=5"></script>
+<script type="module" src="script.js?v=6"></script>
 </body>
 </html>
