fix: Update logo link to redirect to homepage
The logo in the header was previously set to reload the current page. This commit changes the onclick handler to redirect to the root path ('/') to ensure a consistent navigation experience.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-20">
                 <!-- Logo (CMS ID: nav-logo) -->
-                <div class="flex items-center gap-3 cursor-pointer" onclick="window.location.reload()">
+                <div class="flex items-center gap-3 cursor-pointer" onclick="window.location.href='/'">
                     <div class="w-10 h-10 bg-brand-900 rounded-full flex items-center justify-center text-white overflow-hidden shadow-md">
                         <img data-content-id="nav-logo" src="https://picsum.photos/50/50" alt="Logo" class="w-full h-full object-cover opacity-90" />
                     </div>
@@ -160,9 +160,9 @@
                     <div class="w-12 h-12 rounded-full bg-amber-100 flex items-center justify-center text-amber-600 group-hover:bg-amber-500 group-hover:text-white transition-colors"><i data-lucide="scroll" class="w-6 h-6"></i></div>
                     <div><h3 class="font-bold text-lg text-stone-900 font-serif">Storia & Cultura</h3><p class="text-xs text-stone-500 uppercase tracking-wider font-semibold">Le nostre radici</p></div>
                 </a>
-                <a href="#contatti" class="bg-white rounded-xl shadow-xl p-6 flex items-center gap-4 hover:-translate-y-1 transition-transform border-b-4 border-slate-600 cursor-pointer group">
-                    <div class="w-12 h-12 rounded-full bg-slate-100 flex items-center justify-center text-slate-600 group-hover:bg-slate-600 group-hover:text-white transition-colors"><i data-lucide="phone" class="w-6 h-6"></i></div>
-                    <div><h3 class="font-bold text-lg text-stone-900 font-serif">Contatti Utili</h3><p class="text-xs text-stone-500 uppercase tracking-wider font-semibold">Resta informato</p></div>
+                <a href="#ospitalita" class="bg-white rounded-xl shadow-xl p-6 flex items-center gap-4 hover:-translate-y-1 transition-transform border-b-4 border-rose-600 cursor-pointer group">
+                    <div class="w-12 h-12 rounded-full bg-rose-100 flex items-center justify-center text-rose-600 group-hover:bg-rose-600 group-hover:text-white transition-colors"><i data-lucide="utensils" class="w-6 h-6"></i></div>
+                    <div><h3 class="font-bold text-lg text-stone-900 font-serif">Ospitalità</h3><p class="text-xs text-stone-500 uppercase tracking-wider font-semibold">Dove Mangiare e Dormire</p></div>
                 </a>
             </div>
         </section>
