feat: Add placeholder for dynamic hero background
Introduces a new `div` element in the hero section of `index.html`. This element is intended to serve as a container for dynamically loaded background images, improving the visual appeal and adaptability of the homepage.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <section class="relative h-screen w-full overflow-hidden flex items-center justify-center">
         <!-- Dynamic Background -->
         <div data-content-id="home_hero_bg" class="absolute inset-0 z-0 bg-cover bg-center transition-transform duration-[20s] hover:scale-105 opacity-0 transition-opacity duration-1000"></div>
-        
+          <!-- Caricato da CSV -->
         <div class="absolute inset-0 bg-gradient-to-t from-deep-950 via-deep-950/40 to-deep-950/60 z-10"></div>
 
         <div class="relative z-20 text-center px-4 max-w-5xl mx-auto mt-10">
