Update text color and title in cammino.html

--- a/cammino.html
+++ b/cammino.html
@@ -50,7 +50,7 @@
         <div class="max-w-7xl mx-auto px-6 h-24 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-4 group">
                 <div class="flex flex-col">
-                    <span class="text-[10px] uppercase tracking-[0.25em] text-stone-400 font-bold leading-none mb-1.5">Portale Ufficiale</span>
+                    <span class="text-[10px] uppercase tracking-[0.25em] text-bronze-400 font-bold leading-none mb-1.5">Portale Ufficiale</span>
                     <span class="text-xl font-serif text-stone-900 tracking-wide leading-none group-hover:text-bronze-400 transition-colors">Visit Avigliano</span>
                 </div>
             </a>
@@ -71,7 +71,7 @@
         <div class="absolute inset-0 bg-stone-900/30 z-10"></div>
         <div class="relative z-20 text-center px-6 max-w-4xl mx-auto mt-20 reveal">
             <span class="inline-block py-1 px-4 rounded-full border border-white/30 bg-white/10 backdrop-blur text-white text-[10px] font-bold tracking-[0.3em] uppercase mb-6">Itinerario Ufficiale</span>
-            <h1 data-content-id="cammino_page_hero_title" class="text-5xl md:text-7xl font-serif text-white mb-6 drop-shadow-lg">Il Cammino del Lago</h1>
+            <h1 data-content-id="cammino_page_hero_title" class="text-5xl md:text-7xl font-serif text-white mb-6 drop-shadow-lg">...</h1>
             <p data-content-id="cammino_page_hero_desc" class="text-lg text-white/90 font-light leading-relaxed max-w-2xl mx-auto">...</p>
         </div>
     </section>
