--- a/cammino.html
+++ b/cammino.html
@@ -150,4 +150,94 @@
             <div class="bg-white rounded-[2.5rem] shadow-[0_30px_60px_-15px_rgba(26,60,52,0.08)] border border-stone-200 overflow-hidden reveal reveal-delay-1">
                 <div class="bg-paper-100 p-8 border-b border-stone-200 flex items-center justify-between">
                     <div class="flex items-center gap-3">
-                        <div
+                        <div class="bg-white p-2 rounded-full shadow-sm text-bronze-400"><i data-lucide="scroll-text" class="w-6 h-6"></i></div>
+                        <div>
+                            <span class="block text-xs font-bold uppercase tracking-widest text-bronze-400">Modulo Richiesta</span>
+                            <span class="font-serif text-stone-900 text-lg">Credenziale Ufficiale</span>
+                        </div>
+                    </div>
+                    <div class="hidden md:block text-right">
+                        <span class="block text-[10px] font-bold uppercase text-stone-400">Codice</span>
+                        <span class="font-mono text-stone-600">LAGO-TIBERINO</span>
+                    </div>
+                </div>
+
+                <div class="p-8 md:p-12">
+                    <form action="https://formsubmit.co/comunediaviglianoumbro@gmail.com" method="POST" class="space-y-8">
+                        <input type="hidden" name="_subject" value="NUOVA RICHIESTA CREDENZIALE CAMMINO">
+                        <input type="hidden" name="_template" value="table">
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="https://visitaviglianoumbro.it/cammino.html?status=success">
+
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                            <div class="space-y-6">
+                                <h4 class="text-sm font-bold uppercase tracking-widest text-stone-400 border-b border-stone-200 pb-2">Dettagli Viaggio</h4>
+                                <div>
+                                    <label class="block text-xs font-bold text-stone-600 mb-2 uppercase">Modalità</label>
+                                    <div class="grid grid-cols-2 gap-4">
+                                        <label class="cursor-pointer group">
+                                            <input type="radio" name="Modalita" value="A Piedi" class="peer sr-only" checked>
+                                            <div class="p-4 rounded-xl border border-stone-200 bg-paper-50 peer-checked:bg-stone-900 peer-checked:border-stone-900 peer-checked:text-white transition-all text-center hover:bg-white">
+                                                <i data-lucide="footprints" class="w-6 h-6 mx-auto mb-2 text-stone-400 peer-checked:text-bronze-400"></i>
+                                                <span class="text-xs font-bold uppercase tracking-wide">A Piedi</span>
+                                            </div>
+                                        </label>
+                                        <label class="cursor-pointer group">
+                                            <input type="radio" name="Modalita" value="In Bici" class="peer sr-only">
+                                            <div class="p-4 rounded-xl border border-stone-200 bg-paper-50 peer-checked:bg-stone-900 peer-checked:border-stone-900 peer-checked:text-white transition-all text-center hover:bg-white">
+                                                <i data-lucide="bike" class="w-6 h-6 mx-auto mb-2 text-stone-400 peer-checked:text-bronze-400"></i>
+                                                <span class="text-xs font-bold uppercase tracking-wide">In Bici</span>
+                                            </div>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="grid grid-cols-2 gap-4">
+                                    <div><label class="block text-xs font-bold text-stone-600 mb-2 uppercase">Data Partenza</label><input type="date" name="Data_Partenza" required class="form-input"></div>
+                                    <div><label class="block text-xs font-bold text-stone-600 mb-2 uppercase">N. Persone</label><input type="number" name="Numero_Persone" min="1" value="1" required class="form-input"></div>
+                                </div>
+                            </div>
+                            <div class="space-y-6">
+                                <h4 class="text-sm font-bold uppercase tracking-widest text-stone-400 border-b border-stone-200 pb-2">Anagrafica Referente</h4>
+                                <div class="grid grid-cols-2 gap-4">
+                                    <div><label class="block text-xs font-bold text-stone-600 mb-2 uppercase">Nome</label><input type="text" name="Nome" required class="form-input"></div>
+                                    <div><label class="block text-xs font-bold text-stone-600 mb-2 uppercase">Cognome</label><input type="text" name="Cognome" required class="form-input"></div>
+                                </div>
+                                <div><label class="block text-xs font-bold text-stone-600 mb-2 uppercase">Email</label><input type="email" name="Email" placeholder="Per ricevere la credenziale" required class="form-input"></div>
+                                <div><label class="block text-xs font-bold text-stone-600 mb-2 uppercase">Provenienza</label><input type="text" name="Citta_Provenienza" placeholder="Città / Nazione" required class="form-input"></div>
+                            </div>
+                        </div>
+
+                        <div class="pt-8 border-t border-stone-200 mt-8 flex flex-col items-center">
+                            <div class="flex items-center gap-3 mb-6">
+                                <input type="checkbox" required id="privacy" class="w-4 h-4 text-bronze-400 border-stone-300 rounded focus:ring-bronze-400">
+                                <label for="privacy" class="text-xs text-stone-600">Accetto il trattamento dei dati per il rilascio della credenziale.</label>
+                            </div>
+                            <button type="submit" class="w-full md:w-auto px-12 py-4 bg-stone-900 text-white rounded-full font-bold uppercase tracking-widest text-xs hover:bg-bronze-400 transition-all shadow-lg hover:shadow-xl hover:-translate-y-1 flex items-center justify-center gap-3"><span>Invia Richiesta</span><i data-lucide="send" class="w-4 h-4"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-stone-900 py-12 text-center border-t border-stone-800 mt-0">
+        <p class="text-stone-400 text-xs uppercase tracking-widest">&copy; 2025 Visit Avigliano Umbro</p>
+    </footer>
+
+    <script src="script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const revealElements = document.querySelectorAll('.reveal');
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if(entry.isIntersecting){
+                        entry.target.classList.add('active');
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, { threshold: 0.1 });
+            revealElements.forEach(el => observer.observe(el));
+        });
+    </script>
+</body>
+</html>
