--- a/index.html
+++ b/index.html
@@ -115,15 +115,12 @@
         <div class="absolute top-0 left-12 h-full w-[1px] bg-white/10 z-20 hidden md:block"></div>
         <div class="absolute top-0 right-12 h-full w-[1px] bg-white/10 z-20 hidden md:block"></div>
 
-        <div class="flex flex-col items-start justify-center">
-                <span data-content-id="nav_subtitle" 
-                      class="inline-block border border-gold/80 text-gold px-3 py-[2px] rounded-full text-[8px] md:text-[9px] font-bold uppercase tracking-[0.25em] mb-1 hover:bg-gold hover:text-ink transition-all duration-500 shadow-[0_0_10px_rgba(212,175,55,0.15)] cursor-default bg-ink/30 backdrop-blur-sm">
-                    ...
-                </span>
-                <span class="text-lg md:text-xl font-serif text-white leading-none tracking-wide group-hover:text-gold transition-colors">
-                    Visit Avigliano
-                </span>
-            </div>
+        <div class="relative z-30 w-full max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-12 gap-8 items-end reveal">
+            <div class="md:col-span-8">
+                <div class="flex items-center gap-4 mb-4">
+                    <span class="h-[1px] w-12 bg-gold"></span>
+                    <span data-content-id="home_hero_subtitle" class="text-gold text-xs font-bold tracking-[0.4em] uppercase">...</span>
+                </div>
                 <h1 data-content-id="home_hero_title" class="text-6xl md:text-9xl font-serif text-white leading-[0.85] tracking-tight">Visit Avigliano</h1>
             </div>
             <div class="md:col-span-4 text-white/80 flex flex-col justify-end">
