--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div id="load-more-btn" class="text-center mt-8 border-t border-white/10 pt-8 hidden">
                 <a href="eventi.html" class="text-xs font-bold uppercase tracking-widest hover:text-gold transition">Vedi Tutto L'archivio</a>
             </div>
-            <div id="all-events-grid" class="hidden grid grid-cols-1 md:grid-cols-3 gap-8 mt-12"></div>
+            <div id="all-events-grid" class="hidden grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 mt-12 animate-fade-in"></div>
         </div>
     </section>
 
